test_scripts/errors/simple_panic.stderr
 1 | panic("test panic");
     ^^^^^^^^^^^^^^^^^^^
Error: test panic

